[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameHUDRelated/PauseScreenPanel/HubPausePanel/HubPausePanel.gd" type="Script" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="HubPausePanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 200.0
margin_bottom = 248.0
custom_constants/separation = 40

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_left = 39.0
margin_right = 160.0
margin_bottom = 21.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "Game Paused"

[node name="ContentContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 200.0
margin_bottom = 248.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ContentContainer"]
margin_right = 200.0
margin_bottom = 187.0
custom_constants/separation = 20

[node name="ResumeButton" parent="VBoxContainer/ContentContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 44.0
margin_right = 155.0
margin_bottom = 49.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="GameControlsButton" parent="VBoxContainer/ContentContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 44.0
margin_top = 69.0
margin_right = 155.0
margin_bottom = 118.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="GameSettingsButton" parent="VBoxContainer/ContentContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 44.0
margin_top = 138.0
margin_right = 155.0
margin_bottom = 187.0
size_flags_horizontal = 6
size_flags_vertical = 6
[connection signal="on_button_released_with_button_left" from="VBoxContainer/ContentContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="VBoxContainer/ContentContainer/VBoxContainer/GameControlsButton" to="." method="_on_GameControlsButton_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="VBoxContainer/ContentContainer/VBoxContainer/GameSettingsButton" to="." method="_on_GameSettingsButton_on_button_released_with_button_left"]
